overflow clip fix

--- a/src/index.less
+++ b/src/index.less
@@ -15,6 +15,10 @@ body {
   --dust-color-2: #d9243c;
 }
 
+html, body, #tyndustre-0, #title {
+  overflow: clip;
+}
+
 #tyndustre-0 {
   font-family: "Azeret Mono";
 
